Wed Nov 28 18:37:04 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksocket.[ch] (gtk_socket_add_id): Rename 'id' parameter 
	to avoid problems with Objective C.

2001-11-28  Matthias Clasen  <matthiasc@poet.de>
	
	* gtk/gtkaccelmap.c: Typo fixes. (#65607)

	* gtk/gtkfixed.c (gtk_fixed_set_has_window, gtk_fixed_get_has_window):
	Fix docs. (#65505)

	* gtk/gtkwindow.c (gtk_window_set_mnemnonic_modifier): Document.

Wed Nov 28 18:19:12 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_set_tearoff_hints): Move
	accounting of menu->tearoff_scrollbar width to here
	and make sure we have the correct requisition.

	* gtk/gtkmenu.c (gtk_menu_position): Fix fixme
	by using gtk_window_move().

	* gtk/gtkmenu.c (gtk_menu_set_tearoff_state): Force
	the requisition to be updated by calling
	gtk_widget_size_request() (#65440)

	* gtk/gtktearoffmenuitem.c (gtk_tearoff_menu_item_activate): 
	queue resize before calling gtk_menu_set_tearoff_state().

Wed Nov 28 22:20:44 2001  Kristian Rietveld  <kristian@planet.nl>

	* demos/gtk-demo/editable_cells.c: fix typo

	* demos/gtk-demo/list_store.c (add_columns): remove call to
	gtk_tree_view_column_set_clickable which didn't make sense

2001-11-28  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_paint): put the warning
	explaining the validation error in front of the G_BREAKPOINT

	* gtk/gtkrange.c (gtk_range_adjustment_value_changed): call
	process updates with include_children = FALSE instead of TRUE, so
	we redraw the range only, not the whole darn window.  Making
	GtkRange a NO_WINDOW widget had weirdly caused the text widget
	Trace/breakpoint trap bug to become much easier to trigger.

Wed Nov 28 14:12:03 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/Makefile.am (gdk_public_h_sources): Remove reference
	to gdkcursors.h.

2001-11-28  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkwindow.c (gtk_window_move): Add markup to docs.

	* gdk/gdkcursor.h: Directly include the contents